feat(img): ajout support couleurs, dithering et bitmap
- Conversion images en 8 couleurs Minitel
- Attribut style='dithering' pour tramage Floyd-Steinberg
- Attribut style='bitmap' pour noir et blanc
- Gestion couleur de fond avec espace pour validation
- Reset couleurs à chaque ligne pour compatibilité Minitel
- Mise à jour documentation VTML.md